--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
-    <link rel="stylesheet" href="css/fontsizes.css">
+<!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
+    <script src="js/jquery-1.11.1.js"></script>
+
+<!-- <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css">-->
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
+    <script src="js/jquery.mobile-1.4.5.min.js"></script>
+<!--//    <script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>-->
+<!--    <link rel="stylesheet" href="css/fontsizes.css"> -->
+    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/theme.min.css">
     <link rel="stylesheet" href="css/main.css">
 
 
@@ -16,18 +22,22 @@
 <body>
 <section data-role="page" data-theme="a" class="ui-page ui-page-theme ui-page-footer-fixed ui-page-active">
   <div data-role="header" role="banner" class="ui-header ui-bar-inherit">
-            <h1 class="ui-title" role="heading" aria-level="1">Grocery Shopping List</h1>
+            <h1 class="ui-title" role="heading" aria-level="1">Grocery List</h1>
+
         </div>
 <!--  <h1>Grocery Shopping List</h1>-->
     <div data-role="content" class="ui.content" role="main">
-<h2>The super fun grocery shopping list! Click once to mark something as picked up, and double click to remove it!</h2>
+        <h2>Created By: Steve Haskins - hask0023</h2>
+<h2> Swipe any list item to mark it as picked up, or tap and hold to remove something entirely!</h2>
 <ul class="output" data-role="listview"  data-filter="true"></ul>
     </div>
 
 <div data-role="footer" data-position="fixed" role="contentinfo" class="ui-footer ui-bar-inherit ui-footer-fixed slideup">
 <form action="#" name="myForm" method="post">
   <input type="text" name="item" id="item" placeholder="enter new item"/>
-  <button id="btnAdd">Add To List</button>
+    <div id="daWrap">
+  <button id="btnAdd">Add</button>
+    </div>
 </form>
     </div>
 </section>
